# psybeam

./: Cargo.toml  shell.nix
scripts/: psybeam.espy
src/: bindings.rs  main.rs  wayland.rs
