[package]
name = "psybeam"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
espy = { git = "ssh://git@github.com/evie-calico/espy", version = "0.1.0" }
espystandard = { git = "ssh://git@github.com/evie-calico/espy", version = "0.1.0" }
tempfile = "3.22.0"
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
